--- a/public/index.html
+++ b/public/index.html
@@ -539,7 +539,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-12 slideanim">
-				<iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d380510.6741687111!2d-88.01234121699822!3d41.83390417061058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1455598377120" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCMzD9_cebE1J2APqcc6T3dM5zIr6AkfFo' allowfullscreen></script>
+				<div style='overflow:hidden;height:400px;width:100%;'>
+				    <div id='gmap_canvas' style='border:0; height:400px;width:100%;'></div>
+				    <style>
+				        #gmap_canvas img {
+				            max-width: none!important;
+				            background: none!important
+				        }
+				    </style>
+			</div> <a href='https://www.embed-map.net/'>google maps embed</a>
+			<script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=3d6379e11cda0134ca9dc0051ef982af8bbee865'></script>
+			<script type='text/javascript'>
+			    function init_map() {
+			        var myOptions = {
+			            zoom: 18,
+			            center: new google.maps.LatLng(36.76959407092657, 126.93444603264334),
+			            mapTypeId: google.maps.MapTypeId.ROADMAP
+			        };
+			        map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
+			        marker = new google.maps.Marker({
+			            map: map,
+			            position: new google.maps.LatLng(36.76959407092657, 126.93444603264334)
+			        });
+			        infowindow = new google.maps.InfoWindow({
+			            content: '<strong>ORNITHOLOGY</strong><br><br> <br>'
+			        });
+			        google.maps.event.addListener(marker, 'click', function() {
+			            infowindow.open(map, marker);
+			        });
+			        infowindow.open(map, marker);
+			    }
+			    google.maps.event.addDomListener(window, 'load', init_map);
+			</script>
+
+				<!-- <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d380510.6741687111!2d-88.01234121699822!3d41.83390417061058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1455598377120" frameborder="0" style="border:0" allowfullscreen></iframe> -->
 			</div>	
 		</div>
 	</div>
@@ -749,4 +783,5 @@ $(window).scroll(function() {
 			});
 		</script>
 		<!-- /js for pricing table -->
+
 </html>
