main page update2

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<ul class="portfolio-items">
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num1.jpg" /> </div>
+						<div class="view"> <img src="images/1.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">순이</a></span></p>
 							<p><span>By 고양이말곤못살아님</span></p>
@@ -89,7 +89,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num2.jpg" /> </div>
+						<div class="view"> <img src="images/2.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">똘이</a></span></p>
 							<p><span>By Ornithology</span></p>
@@ -99,7 +99,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num3.jpg" /> </div>
+						<div class="view"> <img src="images/3.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">사슴이</a></span></p>
 							<p><span>By dynamicduo9</span></p>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num4.jpg" /> </div>
+						<div class="view"> <img src="images/4.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">꼬마</a></span></p>
 							<p><span>By dynamicduo7</span></p>
@@ -119,7 +119,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num5.jpg" /> </div>
+						<div class="view"> <img src="images/5.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">순돌이</a></span></p>
 							<p><span>By dynamicduo6</span></p>
@@ -129,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num6.jpg" /> </div>
+						<div class="view"> <img src="images/6.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">사랑이</a></span></p>
 							<p><span>By dynamicduo6</span></p>
@@ -139,7 +139,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num7.jpg" /> </div>
+						<div class="view"> <img src="images/7.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">토비</a></span></p>
 							<p><span>By dynamicduo4</span></p>
@@ -149,7 +149,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num8.jpg" /> </div>
+						<div class="view"> <img src="images/8.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">행복이</a></span></p>
 							<p><span>By dynamicduo3</span></p>
@@ -159,7 +159,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num9.jpg" /> </div>
+						<div class="view"> <img src="images/9.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">약속이</a></span></p>
 							<p><span>By dynamicduo2</span></p>
@@ -169,7 +169,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num10.jpg" /> </div>
+						<div class="view"> <img src="images/10.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">슈가</a></span></p>
 							<p><span>By dynamicduo</span></p>
@@ -179,7 +179,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</li>
 				<li class="item">
 					<figure>
-						<div class="view"> <img src="images/num11.jpg" /> </div>
+						<div class="view"> <img src="images/11.jpg" /> </div>
 						<figcaption>
 							<p><span><a href="#0">페퍼</a></span></p>
 							<p><span>By dynamicduo</span></p>
@@ -203,40 +203,40 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<p class="text-center slideanim">편안하게 쉬고있는 우리의 반려동물 갤러리입니다.</p>
 	<div class="container">
 		<div class="im_wrapper">
-			<div><img src="images/num1.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num2.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num3.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num4.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num5.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num6.jpg" class="img-responsive" alt=""/></div>
+			<div><img src="images/a1.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a2.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a3.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a4.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a5.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a6.jpg" class="img-responsive" alt=""/></div>
 
-            <div><img src="images/num7.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num8.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num9.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num10.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num11.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num12.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a7.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a8.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a9.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a10.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a11.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a12.jpg" class="img-responsive" alt=""/></div>
 
-            <div><img src="images/num3.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num9.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num7.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num2.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num4.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num12.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a3.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a9.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a7.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a2.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a4.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a12.jpg" class="img-responsive" alt=""/></div>
 			
-			<div><img src="images/num7.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num5.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num10.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num3.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num8.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num4.jpg" class="img-responsive" alt=""/></div>
+			<div><img src="images/a7.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a5.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a10.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a3.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a8.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a4.jpg" class="img-responsive" alt=""/></div>
 			
-			<div><img src="images/num1.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num11.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num10.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num6.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num3.jpg" class="img-responsive" alt=""/></div>
-            <div><img src="images/num8.jpg" class="img-responsive" alt=""/></div>	
+			<div><img src="images/a1.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a11.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a10.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a6.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a3.jpg" class="img-responsive" alt=""/></div>
+            <div><img src="images/a8.jpg" class="img-responsive" alt=""/></div>	
         </div>
 	</div>
 </section>	
